Update swagger and other
